# osmium

./: .gitignore  CMakeLists.txt  Makefile
build_cmake/: build.bat
examples/: CMakeLists.txt  Makefile  osmium_time.cpp
include/osmium/: input.hpp  osmfile.hpp  smart_ptr.hpp
include/osmium/handler/: progress.hpp
include/osmium/input/: pbf.hpp  xml.hpp
include/osmium/multipolygon/: assembler.hpp
include/osmium/osm/: object.hpp  position.hpp  types.hpp
include/osmium/output/: pbf.hpp  xml.hpp
include/osmium/storage/byid/: mmap_file.hpp  simple_map.hpp  sparse_map.hpp  sparse_table.hpp
include/osmium/utils/: timestamp.hpp
include/osmium/windows/: inttypes.h  systime.hpp
osmjs/: CMakeLists.txt
test/: CMakeLists.txt
test/broken_way_geometries/: test.sh
test/t/geometry/: CMakeLists.txt
test/t/geometry_geos/: CMakeLists.txt
test/t/geometry_ogr/: CMakeLists.txt
test/t/handler/: CMakeLists.txt
test/t/osm/: CMakeLists.txt  test_tag_list.cpp
test/t/osmfile/: CMakeLists.txt
test/t/tags/: CMakeLists.txt
test/t/utils/: CMakeLists.txt
test/utf8_clipping/: test.sh
